refactor: use direct field access in cursor methods